--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../latihan5/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Latihan 5</title>
   </head>
   <body>
